--- a/CFBlocks/src/styles.css
+++ b/CFBlocks/src/styles.css
@@ -16,7 +16,6 @@ html.kitchen-theme, body.kitchen-theme {
 .main {
   padding-top: 57px;
 }
-
 div.page-header {
   border-radius: 5px;
   padding: 15px 25px;
@@ -25,6 +24,11 @@ div.page-header {
   margin-bottom: 15px;
 }
 
+/*Stupid Bottom Menu Bar*/
+.background.mobileSafari,
+.background.mobileSafari .modal.show {
+  /*margin-bottom: 44px;*/
+}
 /* font awesome overrides */
 i.fa.active {
   color: #0072c6;
